3D+JS基本可以用

--- a/bin/imgui.ini
+++ b/bin/imgui.ini
@@ -3,10 +3,14 @@ Pos=60,60
 Size=400,400
 
 [Window][JavaScript脚本查看器]
-Pos=820,10
+Pos=860,43
 Size=450,600
 
 [Window][3D模型视图]
-Pos=10,10
+Pos=31,246
 Size=800,600
+
+[Window][JavaScript按钮]
+Pos=69,12
+Size=346,180
 
